# HTTPClient

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: get.cc  status.cc
src/: HTTPClient.cc  HTTPClient.h  HTTPClientCURL.h  HTTPClientErrors.h  HTTPClientIMPL.cc  HTTPClientIMPL.h
test/examples/: get.cc  status.cc
test/utest/: utx_httpclient.cc
